# BlenDaViz

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  README.md  __init__.py  box.py  camera.py  colors.py  generic.py  globals.py  lights.py  matplotlib_bridge.py  plot1d.py  plot2d.py  plot3d.py  pyproject.toml  run_blender_tests.py  streamlines.py  streamlines3d.py  vectors.py
.github/workflows/: blender-tests.yml  tests.yml
blendaviz/: __init__.py  box.py  camera.py  colors.py  generic.py  globals.py  lights.py  markers.py  materials.py  matplotlib_bridge.py  plot1d.py  plot2d.py  plot3d.py  streamlines3d.py
blendaviz/tests/: test_all.py
docs/: Makefile  conf.py  index.rst
docs/auto/: blendaviz.rst  modules.rst
paper/: Makefile  paper.bib  paper.md
tests/: run_blender_tests.py  test_all.py
